Add realise dll

--- a/Test-API/Test-API.csproj
+++ b/Test-API/Test-API.csproj
@@ -53,12 +53,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Lib\b322-device.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Lib\ftd2xx.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Lib\b322-device.dll" />
+    <Content Include="Lib\b322-device.pdb" />
+    <Content Include="Lib\ftd2xx.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
